- Fixed Recipe steps getting splited

--- a/SiGotvime (Web)/Views/Account/Login.cshtml
+++ b/SiGotvime (Web)/Views/Account/Login.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SiGotvime.Data.ViewModels.LoginViewModel
 @{
-    ViewBag.Title = "Login";
+    ViewBag.Title = "Најава";
     string returnUrl = Request.QueryString["ReturnUrl"];    
 }
 
