--- a/SiGotvime (Web)/Views/Account/Register.cshtml
+++ b/SiGotvime (Web)/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SiGotvime.Data.ViewModels.RegisterViewModel
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Регистрација";
 }
 
 @using(Html.BeginForm("Register", "Account", null, FormMethod.Post, new { id = "registerForm", novalidate = "novalidate" }))
