--- a/SiGotvime (Web)/Views/Blog/Index.cshtml
+++ b/SiGotvime (Web)/Views/Blog/Index.cshtml
@@ -81,18 +81,8 @@
         <!--//content-->
         <!--right sidebar-->
         <aside class="sidebar one-fourth">           
-            <div class="widget">
-                <ul class="categories right">
-                    <li><a href="#">All recipes</a></li>
-                    <li class="active"><a href="#">Tips and Tricks</a></li>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="#">Inspiration</a></li>
-                    <li><a href="#">Category name</a></li>
-                    <li><a href="#">Lorem ipsum</a></li>
-                    <li><a href="#">Dolor</a></li>
-                    <li><a href="#">Sit amet</a></li>
-                </ul>
-            </div>
+            <a class="twitter-timeline" href="https://twitter.com/SiGotvime" data-widget-id="681599396665004033" height="450" data-lang="mk">Tweets by @@SiGotvime</a>
+            <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
             @Html.Action("Advertisments", "Home")
         </aside>
         <!--//right sidebar-->
