--- a/SiGotvime (Web)/Views/Home/Index.cshtml
+++ b/SiGotvime (Web)/Views/Home/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@model SiGotvime.Data.ViewModels.HomePageViewModel
 @using SiGotvime.Utilities
+
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Дома";
 }
 
 @section Scripts{
@@ -298,6 +299,7 @@
             </div>
             <a class="twitter-timeline" href="https://twitter.com/SiGotvime" data-widget-id="681599396665004033" height="450" data-lang="mk">Tweets by @@SiGotvime</a>
             <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
+
             @*<div class="widget members wow fadeInRight" data-wow-delay=".4s">
                 <h3>Our members</h3>
                 <div id="members-list-options" class="item-options">
