--- a/SiGotvime (Web)/Views/Plan/Index.cshtml
+++ b/SiGotvime (Web)/Views/Plan/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Планирање рецепти";
 
 }
+
 @section Styles{
     <link href="~/Scripts/Full Calendar/fullcalendar.css" rel="stylesheet" />
 }
