- Added reCaptcha to Register page

--- a/SiGotvime (Web)/Content/Site.css
+++ b/SiGotvime (Web)/Content/Site.css
@@ -124,3 +124,7 @@ input[type="submit"][disabled] {
     border-bottom: dashed 1px white!important;
     text-decoration:none;
 }
+
+.field-validation-error{
+    color:#F4716A;
+}
