--- a/SiGotvime (Web)/Views/Shared/_Layout.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_Layout.cshtml
@@ -24,7 +24,8 @@
     <link href="~/Content/angucomplete-alt.css" rel="stylesheet" />
     <script src="~/Scripts/moment.min.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
-    
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+
     @RenderSection("styles", required: false)
 </head>
 
@@ -181,7 +182,7 @@
     <script src="~/Scripts/jquery-1.11.1.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script src="~/Scripts/jquery.uniform.min.js"></script>
-    @*<script src="~/Scripts/jquery.validate.js"></script>*@
+    <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/validation/languages/jquery.validationEngine-en.js"></script>
     <script src="~/Scripts/validation/jquery.validationEngine.js"></script>
     <script src="~/Scripts/wow.min.js"></script>
