- Registered Users view for Admins

--- a/SiGotvime (Web)/Views/Shared/_Layout.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_Layout.cshtml
@@ -72,6 +72,7 @@
                             <a href="javascript:void(0)"><span>Аминистратор</span></a>
                             <ul>
                                 <li><a href="@Url.Action("UnApprovedRecipes","Admin")" title="Неодобрени рецепти">Неодобрени Рецепти</a></li>
+                                <li><a href="@Url.Action("RegisteredUsers","Admin")" title="Регистрирани корисници">Корисници</a></li>
                             </ul>
                         </li>
                     }
