--- a/SiGotvime (Web)/Views/Shared/_Layout.cshtml
+++ b/SiGotvime (Web)/Views/Shared/_Layout.cshtml
@@ -24,7 +24,9 @@
     <link href="~/Content/angucomplete-alt.css" rel="stylesheet" />
     <script src="~/Scripts/moment.min.js"></script>
     <link href="~/Content/bootstrap.css" rel="stylesheet" />
+
     <script src='https://www.google.com/recaptcha/api.js'></script>
+    <script src="~/Scripts/MyScripts/GoogleAnalytics.js"></script>
 
     @RenderSection("styles", required: false)
 </head>
@@ -179,7 +181,10 @@
     <!--backToTop-->
     <a id='backTop'>Back To Top</a>
     <!--//backToTop-->
+        
     <div id="twitter-wjs"></div>
+
+    
     <script src="~/Scripts/jquery-1.11.1.min.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
     <script src="~/Scripts/jquery.uniform.min.js"></script>
