--- a/SiGotvime (Web)/Views/Recipe/Search.cshtml
+++ b/SiGotvime (Web)/Views/Recipe/Search.cshtml
@@ -114,8 +114,7 @@
         <aside class="sidebar one-fourth">
             @{Html.RenderPartial("_SideCategoriesBlocks");}
 
-            <a class="twitter-timeline" href="https://twitter.com/SiGotvime" data-widget-id="681599396665004033" height="450" data-lang="mk">Tweets by @@SiGotvime</a>
-            <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + "://platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script>
+            @{ Html.RenderPartial("_Tweets");}
 
             @*<div class="widget members wow fadeInRight" data-wow-delay=".4s">
                 <h3>Our members</h3>
