--- a/SiGotvime (Web)/Views/Home/Advertisments.cshtml
+++ b/SiGotvime (Web)/Views/Home/Advertisments.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="widget wow fadeInRight" data-wow-delay=".6s">
-    <div id="flashContent">
+    @*<div id="flashContent">
         <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="270" height="250" id="Pakomak 300x250" align="middle">
             <param name="movie" value="~/Content/banners/Pakomak 300x250.swf" />
             <param name="quality" value="high" />
@@ -33,5 +33,7 @@
             </object>
             <!--<![endif]-->
         </object>
-    </div>
+    </div>*@
+    <iframe src="~/Content/banners/Pakomak 300x250.html" height="220">
+    </iframe>
 </div>
