- Moi blog postovi -> Moi statii vo profil

--- a/SiGotvime (Web)/Views/User/Profile.cshtml
+++ b/SiGotvime (Web)/Views/User/Profile.cshtml
@@ -177,7 +177,7 @@
                         <li class="active"><a href="#about" title="About me">Мои податоци</a></li>                        
                         <li><a id="recipesLink" onclick="GetPage('@Url.Action("UserRecipes", "User", new { userID = id })','#profileRecipes')" href="#profileRecipes" title="My recipes">Мои рецепти</a></li>
                         <li><a href="#favorites" title="My favorites" onclick="GetPage('@Url.Action("UserFavourites", "User", new { userID = id })','#favorites')">Омилени</a></li>
-                        <li><a href="#posts" title="My posts" onclick="GetPage('@Url.Action("UserBlogPosts", "User", new { userID = id })','#posts')">Мои Блог Постови</a></li>
+                        <li><a href="#posts" title="My posts" onclick="GetPage('@Url.Action("UserBlogPosts", "User", new { userID = id })','#posts')">Мои Статии</a></li>
                     </ul>
                 </nav>
 
