- Baner Ekon Elektron

--- a/SiGotvime (Web)/Views/Home/Index.cshtml
+++ b/SiGotvime (Web)/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
 }
 
 
-<div class="intro">
+<div class="intro" style="margin-bottom:0;">
     <figure class="bg"><img src="~/images/intro.jpg" alt="" /></figure>
     <!--wrap-->
     <div class="wrap clearfix">
@@ -46,23 +46,32 @@
 
                     <div class="f-row bwrap">                        
                         <input type="submit" value="Пребарување" onclick="GoToSearch()" />
-                    </div>
-
+                    </div>                    
                 </div>
             </div>
+
+            
+
             <!--//search recipes widget-->
         </div>
         <!--//row-->
     </div>
     <!--//wrap-->
+
 </div>
 <!--//intro-->
+
+<a href="http://www.ekonelektron.mk/" style="margin-bottom: 15px; display:block;width:100%;" target="_blank">
+    <img src="~/Content/banners/EkonElektron/ekonElektron.png" style="width:100%;" />
+</a>
 <!--wrap-->
 <div class="wrap clearfix">
     <!--row-->
     <div class="row">
+        
         <!--content-->
         <section class="content full-width">
+            
             <div class="icons dynamic-numbers">
                 <header class="s-title wow fadeInDown">
                     <h2 class="ribbon large">СиГотвиме во бројки</h2>
